--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 version: 0.2.0
-appVersion: v1.4.0
+appVersion: v1.5.0
 description: 'Cortex'
 engine: gotpl
 home: https://cortexmetrics.io/
@@ -28,3 +28,7 @@ dependencies:
     version: 3.2.3
     repository: https://charts.helm.sh/stable
     condition: memcached-index-write.enabled
+  - name: consul
+    version: 0.27.0
+    repository: https://helm.releases.hashicorp.com
+    condition: consul.enabled
