--- a/values.yaml
+++ b/values.yaml
@@ -128,6 +128,11 @@ config:
         expiration: 1h
       memcached_client:
         timeout: 1s
+  blocks_storage:
+    tsdb:
+      dir: /data/cortex-tsdb-ingester
+    bucket_store:
+      sync_dir: /data/cortex-tsdb-querier
   table_manager:
     retention_deletes_enabled: false
     retention_period: 0s
@@ -193,9 +198,9 @@ alertmanager:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -319,6 +324,8 @@ alertmanager:
 
   # Extra env variables to pass to the cortex container
   env: []
+
+  # Enable service monitor CRD from Prometheus Operator
   serviceMonitor:
     enabled: false
 
@@ -346,23 +353,23 @@ distributor:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
-  affinity:
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          podAffinityTerm:
-            labelSelector:
-              matchExpressions:
-                - key: target
-                  operator: In
-                  values:
-                    - distributor
-            topologyKey: 'kubernetes.io/hostname'
+  affinity: {}
+  #  podAntiAffinity:
+  #    preferredDuringSchedulingIgnoredDuringExecution:
+  #      - weight: 100
+  #        podAffinityTerm:
+  #          labelSelector:
+  #            matchExpressions:
+  #              - key: target
+  #                operator: In
+  #                values:
+  #                  - distributor
+  #          topologyKey: 'kubernetes.io/hostname'
 
   annotations: {}
   persistence:
@@ -430,9 +437,9 @@ ingester:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -553,9 +560,9 @@ ruler:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -619,9 +626,9 @@ querier:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -697,9 +704,9 @@ query_frontend:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -775,9 +782,9 @@ table_manager:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -842,9 +849,9 @@ configs:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -887,12 +894,12 @@ configs:
 nginx:
   enabled: true
   replicas: 2
-  http_listen_port: 80
+  http_listen_port: 8080
   config:
     dnsResolver: kube-dns.kube-system.svc.cluster.local
   image:
-    repository: nginx
-    tag: 1.17
+    repository: nginxinc/nginx-unprivileged
+    tag: 1.18
     pullPolicy: IfNotPresent
 
   service:
@@ -916,9 +923,9 @@ nginx:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: ''
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
@@ -929,12 +936,12 @@ nginx:
   livenessProbe:
     httpGet:
       path: /healthz
-      port: http-metrics
+      port: http
     initialDelaySeconds: 10
   readinessProbe:
     httpGet:
       path: /healthz
-      port: http-metrics
+      port: http
     initialDelaySeconds: 10
 
   securityContext: {}
@@ -980,23 +987,23 @@ store_gateway:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
-  affinity:
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          podAffinityTerm:
-            labelSelector:
-              matchExpressions:
-                - key: target
-                  operator: In
-                  values:
-                    - store-gateway
-            topologyKey: 'kubernetes.io/hostname'
+  affinity: {}
+  #  podAntiAffinity:
+  #    preferredDuringSchedulingIgnoredDuringExecution:
+  #      - weight: 100
+  #        podAffinityTerm:
+  #          labelSelector:
+  #            matchExpressions:
+  #              - key: target
+  #                operator: In
+  #                values:
+  #                  - store-gateway
+  #          topologyKey: 'kubernetes.io/hostname'
 
   annotations: {}
 
@@ -1094,9 +1101,9 @@ compactor:
   podLabels: {}
 
   ## Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/port: 'http-metrics'
 
   nodeSelector: {}
   affinity: {}
