fix: PD-177 Rename port
Signed-off-by: Thor Anker Kvisgård Lange <tal@netic.dk>

--- a/templates/nginx/nginx-dep.yaml
+++ b/templates/nginx/nginx-dep.yaml
@@ -55,7 +55,7 @@ spec:
             - name: config
               mountPath: /etc/nginx
           ports:
-            - name: http-metrics
+            - name: http
               containerPort: {{ .Values.nginx.http_listen_port }}
               protocol: TCP
           livenessProbe:
