--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configs.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -113,4 +114,5 @@ spec:
         {{- end }}
 {{- if .Values.configs.extraVolumes }}
 {{ toYaml .Values.configs.extraVolumes | indent 8}}
+{{- end }}
 {{- end }}
