--- a/templates/configs/configs-svc.yaml
+++ b/templates/configs/configs-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configs.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -16,3 +17,4 @@ spec:
       name: http-metrics
       targetPort: http-metrics
   selector: {{ include "cortex-configs.matchLabels" . | nindent 4 }}
+{{- end }}
