--- a/Chart.yaml
+++ b/Chart.yaml
@@ -28,6 +28,32 @@ dependencies:
     version: 3.2.3
     repository: https://charts.helm.sh/stable
     condition: memcached-index-write.enabled
+
+  - name: memcached
+    alias: memcached-frontend
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    condition: memcached-frontend.enabled
+
+  - name: memcached
+    alias: memcached-index
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
+  - name: memcached
+    alias: memcached-chunks
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
+  - name: memcached
+    alias: memcached-metadata
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
+
   - name: consul
     version: 0.27.0
     repository: https://helm.releases.hashicorp.com
