--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -48,6 +48,7 @@ spec:
           args:
             - "-target=query-frontend"
             - "-config.file=/etc/cortex/cortex.yaml"
+            {{- include "cortex.frontend-memcached" . | nindent 12}}
           {{- range $key, $value := .Values.query_frontend.extraArgs }}
             - "-{{ $key }}={{ $value }}"
           {{- end }}
