fix: PD-177 Fixing up ingress definition
Signed-off-by: Thor Anker Kvisgård Lange <tal@netic.dk>

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,14 +1,17 @@
 {{- if and .Values.ingress.enabled .Values.nginx.enabled -}}
-{{- $fullName := include "cortex.fullname" . -}}
+{{- $fullName := include "cortex-nginx.fullname" . -}}
 {{- $svcPort := .Values.nginx.http_listen_port -}}
-{{- if semverCompare ">=1.14.0" .Capabilities.KubeVersion.GitVersion -}}
+{{- $kubeVersion := .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.19.0" $kubeVersion -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14.0" $kubeVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ include "cortex.fullname" . }}
   labels: {{ include "cortex.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
@@ -32,9 +35,17 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
+            pathType: "Prefix"
             backend:
+            {{- if semverCompare ">=1.19.0" $kubeVersion }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+            {{- else }}
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
+            {{- end }}
         {{- end }}
   {{- end }}
 {{- end }}
