feat: PD-177 Adding pod disruption budget for all components
Signed-off-by: Thor Anker Kvisgård Lange <tal@netic.dk>

--- a/values-blocks.yaml
+++ b/values-blocks.yaml
@@ -72,6 +72,8 @@ ingester:
   replicas: 2
   statefulSet:
     enabled: true
+  podDisruptionBudget:
+    minAvailable: 1
 
 compactor:
   replicas: 2
