Adding default settings for service monitor to each component. (#80)
Signed-off-by: Ken Haines <khaines@microsoft.com>
Signed-off-by: Thor Anker Kvisgård Lange <tal@netic.dk>

--- a/values.yaml
+++ b/values.yaml
@@ -200,6 +200,9 @@ alertmanager:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 200m
@@ -355,6 +358,9 @@ distributor:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 1
@@ -438,6 +444,9 @@ ingester:
   service:
     annotations: {}
     labels: {}
+
+  serviceMonitor:
+    enabled: false
 
   resources:
     limits:
@@ -563,6 +572,9 @@ ruler:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 200m
@@ -628,6 +640,9 @@ querier:
   service:
     annotations: {}
     labels: {}
+
+  serviceMonitor:
+    enabled: false
 
   resources:
     limits:
@@ -707,6 +722,9 @@ query_frontend:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 1
@@ -785,6 +803,9 @@ table_manager:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 1
@@ -853,6 +874,9 @@ configs:
   service:
     annotations: {}
     labels: {}
+
+  serviceMonitor:
+    enabled: false
 
   resources:
     limits:
@@ -928,6 +952,9 @@ nginx:
     annotations: {}
     labels: {}
 
+  serviceMonitor:
+    enabled: false
+
   resources:
     limits:
       cpu: 100m
@@ -991,6 +1018,9 @@ store_gateway:
   service:
     annotations: {}
     labels: {}
+
+  serviceMonitor:
+    enabled: false
 
   resources:
     limits:
@@ -1105,6 +1135,9 @@ compactor:
   service:
     annotations: {}
     labels: {}
+
+  serviceMonitor:
+    enabled: false
 
   resources:
     limits:
