Adding default chunk entry to schema configs (#81)
Signed-off-by: Ken Haines <khaines@microsoft.com>
Signed-off-by: Thor Anker Kvisgård Lange <tal@netic.dk>

--- a/values.yaml
+++ b/values.yaml
@@ -61,7 +61,7 @@ config:
 
   schema:
     configs:
-      - from: 2019-07-29
+      - from: 2020-11-01
         store: cassandra
         object_store: cassandra
         schema: v10
@@ -70,6 +70,9 @@ config:
           period: 168h
         index:
           prefix: index_
+          period: 168h
+        chunks:
+          prefix: chunks_
           period: 168h
 
   server:
