avoid creating compactor service if not enabled
Signed-off-by: Roger Steneteg <rsteneteg@ea.com>

--- a/templates/compactor-svc.yaml
+++ b/templates/compactor-svc.yaml
@@ -1,3 +1,5 @@
+{{- if eq .Values.config.storage.engine "blocks" -}}
+{{- if .Values.compactor.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -23,3 +25,5 @@ spec:
   selector:
     app: {{ template "cortex.name" . }}-compactor
     release: {{ .Release.Name }}
+{{- end -}}
+{{- end -}}
