--- a/templates/alertmanager/alertmanager-svc.yaml
+++ b/templates/alertmanager/alertmanager-svc.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.alertmanager.statefulSet.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -16,3 +17,4 @@ spec:
       name: http-metrics
       targetPort: http-metrics
   selector: {{ include "cortex-alertmanager.matchLabels" . | nindent 4 }}
+{{- end }}
