--- a/templates/ingester-statefulset.yaml
+++ b/templates/ingester-statefulset.yaml
@@ -19,7 +19,7 @@ spec:
       release: {{ .Release.Name }}
   updateStrategy:
     {{- toYaml .Values.ingester.statefulStrategy | nindent 4 }}          
-  serviceName: {{ template "cortex.fullname" . }}-ingester
+  serviceName: {{ template "cortex.fullname" . }}-ingester-headless
   {{- if .Values.ingester.persistentVolume.enabled }}
   volumeClaimTemplates:
     - metadata:
@@ -136,6 +136,10 @@ spec:
           ports:
             - name: http-metrics
               containerPort: {{ .Values.config.server.http_listen_port }}
+              protocol: TCP
+
+            - name: gossip
+              containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
           livenessProbe:
             {{- toYaml .Values.ingester.livenessProbe | nindent 12 }}
