correct reference to now headless service in ingester statefulset
Signed-off-by: Ken Haines <khaines@microsoft.com>

--- a/templates/ingester-statefulset.yaml
+++ b/templates/ingester-statefulset.yaml
@@ -19,7 +19,7 @@ spec:
       release: {{ .Release.Name }}
   updateStrategy:
     {{- toYaml .Values.ingester.statefulStrategy | nindent 4 }}          
-  serviceName: {{ template "cortex.fullname" . }}-ingester
+  serviceName: {{ template "cortex.fullname" . }}-ingester-headless
   {{- if .Values.ingester.persistentVolume.enabled }}
   volumeClaimTemplates:
     - metadata:
