--- a/Chart.yaml
+++ b/Chart.yaml
@@ -28,3 +28,26 @@ dependencies:
     version: 3.2.3
     repository: https://charts.helm.sh/stable
     condition: memcached-index-write.enabled
+  - name: memcached
+    alias: memcached-frontend
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    condition: memcached-frontend.enabled
+  - name: memcached
+    alias: memcached-blocks-index
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
+  - name: memcached
+    alias: memcached-blocks
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
+  - name: memcached
+    alias: memcached-blocks-metadata
+    version: 3.2.3
+    repository: https://charts.helm.sh/stable
+    tags:
+      - blocks-storage-memcached
