--- a/templates/querier-dep.yaml
+++ b/templates/querier-dep.yaml
@@ -60,12 +60,7 @@ spec:
             - "-target=querier"
             - "-config.file=/etc/cortex/cortex.yaml"
             - "-querier.frontend-address={{ template "cortex.fullname" . }}-query-frontend-headless.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.grpc_listen_port }}"
-            {{- if .Values.memcached.enabled }}
-            - "-store.chunks-cache.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:11211"
-            {{- end }}
-            {{- if index .Values "memcached-index-read" "enabled" }}
-            - "-store.index-cache-read.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached-index-read.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:11211"
-            {{- end }}
+          {{- include "cortex.memcached" . | nindent 12}}
           {{- range $key, $value := .Values.querier.extraArgs }}
             - "-{{ $key }}={{ $value }}"
           {{- end }}
