--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -37,6 +37,7 @@ data:
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
+        proxy_http_version 1.1;
 
         location = /healthz {
           return 200 'alive';
