Expose new HTTP API paths for remote-write and Query frontend to nginx (#103)
Signed-off-by: Akarsh <akarsh.satija@gmail.com>

--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -56,6 +56,12 @@ data:
           proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
+        ## New Remote write API. Ref: https://cortexmetrics.io/docs/api/#remote-write
+        location = /api/v1/push {
+          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
+        }
+
+
         # Alertmanager Config
         location ~ /api/prom/alertmanager/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
@@ -87,6 +93,16 @@ data:
         location ~ /api/prom/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
+
+        ## New Query frontend APIs as per https://cortexmetrics.io/docs/api/#querier--query-frontend
+        location ~ ^{{.Values.config.api.prometheus_http_prefix}}/api/v1/(read|metadata|labels|series|query_range|query) {
+          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
+        }
+
+        location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
+          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}$request_uri;
+        }
+
       }
     }
 {{- end }}
