--- a/ct.yaml
+++ b/ct.yaml
@@ -1,7 +1,8 @@
 # See https://github.com/helm/chart-testing#configuration
 remote: origin
-chart-dirs:
-  - .
+validate-maintainers: false  # ct requires the maintainers to be a github name, which is not valid for this chart.
+charts:
+  - "./"
 chart-repos:
-  - stable=https://charts.helm.sh/stable
+  - base-charts=https://charts.helm.sh/stable
 helm-extra-args: --timeout 600s
