Fix ingress rules config for kubernetes >>=1.19.0
Signed-off-by: Dilip Kola <dilipkk@foyernet.com>

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -39,8 +39,15 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             backend:
+            {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+            {{- else -}}
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
+            {{- end }}
         {{- end }}
   {{- end }}
 {{- end }}
